--- a/RingBufferPlus/RingBufferPlus.csproj
+++ b/RingBufferPlus/RingBufferPlus.csproj
@@ -58,9 +58,12 @@
 	</ItemGroup>
 	
 	<ItemGroup>
+		<None Include="..\docs\images\icon.png">
+		  <Pack>True</Pack>
+		  <PackagePath>\</PackagePath>
+		</None>
 		<None Include="..\README.md" Pack="false" />
 		<None Include="..\NugetREADME.md" Pack="true" PackagePath="\" />
-		<None Include="..\icon.png" Pack="true" PackagePath="\" />
 	</ItemGroup>
 
 
