--- a/RingBufferPlus/RingBufferPlus.csproj
+++ b/RingBufferPlus/RingBufferPlus.csproj
@@ -40,15 +40,6 @@
 		<WarningLevel>4</WarningLevel>
 	</PropertyGroup>
 
-	<ItemGroup Condition="'$(TargetFramework)'=='.net6'">
-		<PackageReference Include="Microsoft.Extensions.Logging.Abstractions" Version="6.0.0" />
-	</ItemGroup>
-	<ItemGroup Condition="'$(TargetFramework)'=='.net5'">
-		<PackageReference Include="Microsoft.Extensions.Logging.Abstractions" Version="5.0.0" />
-	</ItemGroup>
-	<ItemGroup Condition="'$(TargetFramework)'=='netstandard2.1'">
-		<PackageReference Include="Microsoft.Extensions.Logging.Abstractions" Version="3.1.22" />
-	</ItemGroup>
 	<ItemGroup>
 		<None Include="..\docs\images\icon.png">
 			<Pack>True</Pack>
@@ -61,5 +52,9 @@
 		<None Include="..\README.md">
 			<Pack>False</Pack>
 		</None>
+	</ItemGroup>
+	<ItemGroup>
+		<PackageReference Include="Microsoft.Extensions.Logging.Abstractions" Version="6.0.0" />
+		<PackageReference Include="Microsoft.Extensions.Hosting.Abstractions" Version="6.0.0" />
 	</ItemGroup>
 </Project>
